--- a/forms in html.html
+++ b/forms in html.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>personal information</h1>
+
     <form>
+        <fieldset>
+            <legend> <h3>personal information form</h3></legend
         <label>name</label><br>
         <input type="text" id="name"><br>
         <label>email id</label><br>
@@ -21,6 +23,7 @@
         <input type="checkbox" id="favourite city" value="kathmandu">kathmandu<br>
         <input type="checkbox" id="favourite city" value="lalitpur">lalitpur<br>
         <input type="submit">
+        </fieldset>
     </form>
 </body>
 </html>
