--- a/forms in html.html
+++ b/forms in html.html
@@ -10,7 +10,7 @@
     <form>
         <fieldset>
             <legend> <h3>personal information form</h3></legend
-        <label>name</label><br>
+        >name</label><br>
         <input type="text" id="name"><br>
         <label>email id</label><br>
         <input type="text" id="email"><br>
