--- a/forms in html.html
+++ b/forms in html.html
@@ -22,6 +22,10 @@
         <label>favourite city</label><br>
         <input type="checkbox" id="favourite city" value="kathmandu">kathmandu<br>
         <input type="checkbox" id="favourite city" value="lalitpur">lalitpur<br>
+        <label>username</label><br>
+        <input type="text" id="username"><br>
+        <label>password</label><br>
+        <input type="password" id="password"><br>
         <input type="submit">
         </fieldset>
     </form>
